ProdIND/ProdPrograms/force-app/main/default/objects/VehicleTypeCategory__mdt/VehicleTypeCategory__mdt.object-meta.xml
<CustomObject>
    <label>VehicleTypeCategory</label>
    <pluralLabel>VehicleTypeCategories</pluralLabel>
</CustomObject>