ProdIND/ProdPrograms/force-app/main/default/objects/VehicleTypeCategory__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>This product code is being used with Final Terms Module.</description>
    <inlineHelpText>This product code is being used with Final Terms Module.</inlineHelpText>
    <label>Product Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>