ProdIND/ProdPrograms/force-app/main/default/objects/VehicleTypeCategory__mdt/fields/productType__c.field-meta.xml
<CustomField>
    <fullName>productType__c</fullName>
    <label>productType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>