ProdIND/ProdPrograms/force-app/main/default/objects/VehicleTypeCategory__mdt/fields/vehicleType__c.field-meta.xml
<CustomField>
    <fullName>vehicleType__c</fullName>
    <label>vehicleType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>