ProdIND/ProdPrograms/force-app/main/default/objects/VehicleTypeCategory__mdt/listViews/All_Fields_Data.listView-meta.xml
<ListView>
    <fullName>All_Fields_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>vehicleCategoryCode__c</columns>
    <columns>Product_Code__c</columns>
    <columns>vehicleType__c</columns>
    <columns>productType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields Data</label>
</ListView>